@@ -61,6 +61,7 @@ TABLE OF CONTENTS
         * Sebastian V.        <hal9000@denorastats.org>
         * Klaas Tammling      <obi_wan@denorastats.org>
         * Alexander Maassen   <outsider@denorastats.org>
+        * w00t
 
     Denora Translations:
 
